--- a/favorites.html
+++ b/favorites.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Favorites</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <h1>Saved Quotes</h1>
+  <ul id="favorites"></ul>
+  <script src="js/favorites.js"></script>
+</body>
+</html>
